--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,3 +1,16 @@
 <h1>{{result.title}}</h1>
 <div>{{result.content}}</div>
 <p>Автор: {{result.author}}</p>
+<div class="col-sm-8">
+    <form action="/addComment" method="post">
+        <div class="mb-3">
+            <textarea name="comment" class="form-control"></textarea>
+        </div>
+        <div class="mb-3">
+            <input type="submit" class="btn btn-primary" value="Добавть комментарий">
+        </div>
+    </form>
+</div>
+<div>
+    <!-- тут комментарии пользователей -->
+</div>
